tests/parse_decl_errors.txt


ASDF;


Something :: proc() {
}


^Memes;

Some_Struct :: struct {
    i: int;
}


Another_One

// #failed: parse
// #error: got unexpected token
// #error: got unexpected token
// #error: got unexpected token